# HCGateway-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  app.py  config.py  data_extractor.py  docker-compose.yml  main.py  pyproject.toml  steps.py
.github/instructions/: senior-dev.instructions.md
models/: __init__.py  steps.py
notebooks/: hcgateway_api_client_test.ipynb
src/hcgateway_dashboard/: __init__.py  __main__.py  api_client.py  config.py  dashboard.py
src/hcgateway_dashboard/models/: __init__.py  common.py  steps.py
tests/: __init__.py  conftest.py  test_api_client.py  test_data_extractor.py
