[build-system]
build-backend = "setuptools.build_meta"
requires      = ["setuptools>=61.0", "wheel"]

[project]
authors = [{ name = "Andres Ingelmo", email = "aingelmo@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Streamlit",
    "Intended Audience :: Home Users",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
description = "A Streamlit dashboard for visualising HCGateway data"
keywords = ["streamlit", "dashboard", "health", "visualization"]
name = "hcgateway-dashboard"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

dependencies = [
    "streamlit>=1.47.1",
    "requests>=2.32.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
]

[project.urls]
Documentation = "https://github.com/aingelmo/HCGateway-dashboard#readme"
Homepage      = "https://github.com/aingelmo/HCGateway-dashboard"
Issues        = "https://github.com/aingelmo/HCGateway-dashboard/issues"
Repository    = "https://github.com/aingelmo/HCGateway-dashboard.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length    = 100
src            = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "E501",   # line too long (handled by formatter)
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "COM812", # Use `isinstance` instead of `type` for type checking
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",   # Allow unused imports in tests
    "S101",   # Allow bare excepts in tests
    "SLF001", # Allow logging without a logger in tests
    "S105",   # Allow hardcoded passwords in tests
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "--cov=hcgateway_dashboard",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
testpaths = ["tests"]
